--- a/IBCF.ipynb
+++ b/IBCF.ipynb
@@ -31,7 +31,7 @@
     "normalized_ratings_df = pd.read_csv('./data/normalized_ratings.csv')\n",
     "\n",
     "# lettura dei rating non normalizzati dal relativo CSV\n",
-    "ratings_df = pd.read_csv('./data/jester_jokes_ratings.csv')"
+    "no_normalized_ratings_df = pd.read_csv('./data/no_normalized_ratings.csv')"
    ]
   },
   {
@@ -69,10 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_user_item(item_target, items_rated, active_user_rating, df):\n",
+    "def score_user_item(item_target, items_rated, active_user_rating, similarity_matrix):\n",
     "    t1, t2 = 0, 0\n",
     "    for i in items_rated:\n",
-    "        sim = float(df.loc[((df['elem_1'] == item_target) & (df['elem_2'] == i)) | ((df['elem_1'] == i) & (df['elem_2'] == item_target))][\"similarity\"])\n",
+    "        sim = float(similarity_matrix.loc[((similarity_matrix['elem_1'] == item_target) & (similarity_matrix['elem_2'] == i)) | ((similarity_matrix['elem_1'] == i) & (similarity_matrix['elem_2'] == item_target))][\"similarity\"])\n",
     "        t1+= sim * float(active_user_rating[i]) # numeratore\n",
     "        t2+= sim # denominatore\n",
     "    score = t1 / t2\n",
@@ -90,7 +90,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -180,19 +180,19 @@
     "    app = normalized_ratings_df[[i_1, i_2]].dropna()\n",
     "    similarity_matrix.append([i_1, i_2, cosin_similarity(app[i_1], app[i_2])])\n",
     "    \n",
-    "df = pd.DataFrame(similarity_matrix, columns = ['elem_1', 'elem_2', 'similarity'])\n",
-    "df.head()"
+    "similarity_matrix = pd.DataFrame(similarity_matrix, columns = ['elem_1', 'elem_2', 'similarity'])\n",
+    "similarity_matrix.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommendation_2(active_user_id, ratings_df, df):\n",
+    "def recommendation_2(active_user_id, no_normalized_ratings_df, similarity_matrix):\n",
     "    # si prende la riga relativa all'utente con l'id specificato\n",
-    "    active_user = ratings_df[ratings_df['user_id'] == active_user_id]\n",
+    "    active_user = no_normalized_ratings_df[no_normalized_ratings_df['user_id'] == active_user_id]\n",
     "    # si considerano solo i rating espressi dall'utente target\n",
     "    active_user_rating = active_user.iloc[:, 2:]\n",
     "    # si prendono le barzellette raccomandabili all'utente\n",
@@ -208,7 +208,7 @@
     "    joke_to_suggest = ''\n",
     "    final = []\n",
     "    for joke in recommendation_columns:\n",
-    "        score = score_user_item(joke, rated_items, active_user_rating, df)\n",
+    "        score = score_user_item(joke, rated_items, active_user_rating, similarity_matrix)\n",
     "        print(\"per la barzelletta \" + joke + \" si è predetto un punteggio di: \" + str(score))\n",
     "        if score > top_score:\n",
     "            top_score = score\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -234,117 +234,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "per la barzelletta joke_1 si è predetto un punteggio di: 5.48918911153894\n",
-      "per la barzelletta joke_2 si è predetto un punteggio di: 5.874896885310737\n",
-      "per la barzelletta joke_3 si è predetto un punteggio di: 5.530364213231964\n",
-      "per la barzelletta joke_4 si è predetto un punteggio di: 5.6830206651215\n",
-      "per la barzelletta joke_9 si è predetto un punteggio di: 5.629541237464792\n",
-      "per la barzelletta joke_23 si è predetto un punteggio di: 5.580920494036714\n",
-      "per la barzelletta joke_24 si è predetto un punteggio di: 5.783086061131673\n",
-      "per la barzelletta joke_33 si è predetto un punteggio di: 5.681675853663834\n",
-      "per la barzelletta joke_37 si è predetto un punteggio di: 5.920645912010234\n",
-      "per la barzelletta joke_43 si è predetto un punteggio di: 5.719735411098292\n",
-      "per la barzelletta joke_47 si è predetto un punteggio di: 8.07166285418944\n",
-      "per la barzelletta joke_55 si è predetto un punteggio di: 5.573499141349483\n",
-      "per la barzelletta joke_57 si è predetto un punteggio di: 5.92393050044584\n",
-      "per la barzelletta joke_58 si è predetto un punteggio di: 5.979317271578034\n",
-      "per la barzelletta joke_60 si è predetto un punteggio di: 5.916319952555862\n",
-      "per la barzelletta joke_64 si è predetto un punteggio di: 5.9759776161004226\n",
-      "per la barzelletta joke_67 si è predetto un punteggio di: 5.726215401671431\n",
-      "per la barzelletta joke_71 si è predetto un punteggio di: 5.4738985269520235\n",
-      "per la barzelletta joke_72 si è predetto un punteggio di: 9.827958290733303\n",
-      "per la barzelletta joke_73 si è predetto un punteggio di: 4.587967997499567\n",
-      "per la barzelletta joke_74 si è predetto un punteggio di: 5.672264122989971\n",
-      "per la barzelletta joke_75 si è predetto un punteggio di: 5.410750139215519\n",
-      "per la barzelletta joke_76 si è predetto un punteggio di: -2.6734645908909513\n",
-      "per la barzelletta joke_77 si è predetto un punteggio di: 4.8658485651451215\n",
-      "per la barzelletta joke_78 si è predetto un punteggio di: 3.9610252276329665\n",
-      "per la barzelletta joke_79 si è predetto un punteggio di: 5.062159764505648\n",
+      "per la barzelletta joke_1 si è predetto un punteggio di: 5.489189111538942\n",
+      "per la barzelletta joke_2 si è predetto un punteggio di: 5.87489688531074\n",
+      "per la barzelletta joke_3 si è predetto un punteggio di: 5.530364213231963\n",
+      "per la barzelletta joke_4 si è predetto un punteggio di: 5.683020665121501\n",
+      "per la barzelletta joke_9 si è predetto un punteggio di: 5.629541237464796\n",
+      "per la barzelletta joke_23 si è predetto un punteggio di: 5.5809204940367145\n",
+      "per la barzelletta joke_24 si è predetto un punteggio di: 5.7830860611316695\n",
+      "per la barzelletta joke_33 si è predetto un punteggio di: 5.6816758536638385\n",
+      "per la barzelletta joke_37 si è predetto un punteggio di: 5.920645912010233\n",
+      "per la barzelletta joke_43 si è predetto un punteggio di: 5.719735411098295\n",
+      "per la barzelletta joke_47 si è predetto un punteggio di: 8.071662854189437\n",
+      "per la barzelletta joke_55 si è predetto un punteggio di: 5.573499141349482\n",
+      "per la barzelletta joke_57 si è predetto un punteggio di: 5.923930500445841\n",
+      "per la barzelletta joke_58 si è predetto un punteggio di: 5.9793172715780365\n",
+      "per la barzelletta joke_60 si è predetto un punteggio di: 5.916319952555864\n",
+      "per la barzelletta joke_64 si è predetto un punteggio di: 5.975977616100421\n",
+      "per la barzelletta joke_67 si è predetto un punteggio di: 5.726215401671424\n",
+      "per la barzelletta joke_71 si è predetto un punteggio di: 5.473898526952023\n",
+      "per la barzelletta joke_72 si è predetto un punteggio di: 9.827958290733308\n",
+      "per la barzelletta joke_73 si è predetto un punteggio di: 4.587967997499566\n",
+      "per la barzelletta joke_74 si è predetto un punteggio di: 5.67226412298997\n",
+      "per la barzelletta joke_75 si è predetto un punteggio di: 5.410750139215516\n",
+      "per la barzelletta joke_76 si è predetto un punteggio di: -2.6734645908909527\n",
+      "per la barzelletta joke_77 si è predetto un punteggio di: 4.865848565145123\n",
+      "per la barzelletta joke_78 si è predetto un punteggio di: 3.961025227632968\n",
+      "per la barzelletta joke_79 si è predetto un punteggio di: 5.062159764505647\n",
       "per la barzelletta joke_80 si è predetto un punteggio di: 4.045845836818003\n",
-      "per la barzelletta joke_81 si è predetto un punteggio di: 1.4955859224161052\n",
+      "per la barzelletta joke_81 si è predetto un punteggio di: 1.4955859224161039\n",
       "per la barzelletta joke_82 si è predetto un punteggio di: 5.053253507604671\n",
-      "per la barzelletta joke_83 si è predetto un punteggio di: -1.3356479151249259\n",
-      "per la barzelletta joke_84 si è predetto un punteggio di: 5.0165622116004105\n",
-      "per la barzelletta joke_85 si è predetto un punteggio di: 4.885617002148313\n",
-      "per la barzelletta joke_86 si è predetto un punteggio di: 5.477206909088974\n",
+      "per la barzelletta joke_83 si è predetto un punteggio di: -1.3356479151249347\n",
+      "per la barzelletta joke_84 si è predetto un punteggio di: 5.016562211600409\n",
+      "per la barzelletta joke_85 si è predetto un punteggio di: 4.8856170021483125\n",
+      "per la barzelletta joke_86 si è predetto un punteggio di: 5.477206909088977\n",
       "per la barzelletta joke_87 si è predetto un punteggio di: 3.5571783542179523\n",
-      "per la barzelletta joke_88 si è predetto un punteggio di: 3.9047163655290156\n",
-      "per la barzelletta joke_89 si è predetto un punteggio di: 9.288120689770095\n",
+      "per la barzelletta joke_88 si è predetto un punteggio di: 3.904716365529014\n",
+      "per la barzelletta joke_89 si è predetto un punteggio di: 9.288120689770098\n",
       "per la barzelletta joke_90 si è predetto un punteggio di: 5.167449843337873\n",
       "per la barzelletta joke_91 si è predetto un punteggio di: 4.491371947442441\n",
       "per la barzelletta joke_92 si è predetto un punteggio di: 4.6983272762764665\n",
-      "per la barzelletta joke_93 si è predetto un punteggio di: -6.077476549004646\n",
-      "per la barzelletta joke_94 si è predetto un punteggio di: 5.210642446274966\n",
-      "per la barzelletta joke_95 si è predetto un punteggio di: 5.1202386353047045\n",
-      "per la barzelletta joke_96 si è predetto un punteggio di: 4.66025295865723\n",
+      "per la barzelletta joke_93 si è predetto un punteggio di: -6.077476549004643\n",
+      "per la barzelletta joke_94 si è predetto un punteggio di: 5.210642446274965\n",
+      "per la barzelletta joke_95 si è predetto un punteggio di: 5.120238635304701\n",
+      "per la barzelletta joke_96 si è predetto un punteggio di: 4.660252958657232\n",
       "per la barzelletta joke_97 si è predetto un punteggio di: 4.660128585241255\n",
-      "per la barzelletta joke_98 si è predetto un punteggio di: 2.67378754559341\n",
-      "per la barzelletta joke_99 si è predetto un punteggio di: 5.303777395265998\n",
+      "per la barzelletta joke_98 si è predetto un punteggio di: 2.6737875455934113\n",
+      "per la barzelletta joke_99 si è predetto un punteggio di: 5.303777395265997\n",
       "per la barzelletta joke_100 si è predetto un punteggio di: 8.519295706358418\n",
       "\n",
-      "il valore più alto predetto è 9.827958290733303 su 10\n",
+      "il valore più alto predetto è 9.827958290733308 su 10\n",
       "quindi la barzelletta da raccomandare per la quale si è predetto quel punteggio è:  joke_72\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'user_id': 1001, 'joke_1': 5.48918911153894},\n",
-       " {'user_id': 1001, 'joke_2': 5.874896885310737},\n",
-       " {'user_id': 1001, 'joke_3': 5.530364213231964},\n",
-       " {'user_id': 1001, 'joke_4': 5.6830206651215},\n",
-       " {'user_id': 1001, 'joke_9': 5.629541237464792},\n",
-       " {'user_id': 1001, 'joke_23': 5.580920494036714},\n",
-       " {'user_id': 1001, 'joke_24': 5.783086061131673},\n",
-       " {'user_id': 1001, 'joke_33': 5.681675853663834},\n",
-       " {'user_id': 1001, 'joke_37': 5.920645912010234},\n",
-       " {'user_id': 1001, 'joke_43': 5.719735411098292},\n",
-       " {'user_id': 1001, 'joke_47': 8.07166285418944},\n",
-       " {'user_id': 1001, 'joke_55': 5.573499141349483},\n",
-       " {'user_id': 1001, 'joke_57': 5.92393050044584},\n",
-       " {'user_id': 1001, 'joke_58': 5.979317271578034},\n",
-       " {'user_id': 1001, 'joke_60': 5.916319952555862},\n",
-       " {'user_id': 1001, 'joke_64': 5.9759776161004226},\n",
-       " {'user_id': 1001, 'joke_67': 5.726215401671431},\n",
-       " {'user_id': 1001, 'joke_71': 5.4738985269520235},\n",
-       " {'user_id': 1001, 'joke_72': 9.827958290733303},\n",
-       " {'user_id': 1001, 'joke_73': 4.587967997499567},\n",
-       " {'user_id': 1001, 'joke_74': 5.672264122989971},\n",
-       " {'user_id': 1001, 'joke_75': 5.410750139215519},\n",
-       " {'user_id': 1001, 'joke_76': -2.6734645908909513},\n",
-       " {'user_id': 1001, 'joke_77': 4.8658485651451215},\n",
-       " {'user_id': 1001, 'joke_78': 3.9610252276329665},\n",
-       " {'user_id': 1001, 'joke_79': 5.062159764505648},\n",
+       "[{'user_id': 1001, 'joke_1': 5.489189111538942},\n",
+       " {'user_id': 1001, 'joke_2': 5.87489688531074},\n",
+       " {'user_id': 1001, 'joke_3': 5.530364213231963},\n",
+       " {'user_id': 1001, 'joke_4': 5.683020665121501},\n",
+       " {'user_id': 1001, 'joke_9': 5.629541237464796},\n",
+       " {'user_id': 1001, 'joke_23': 5.5809204940367145},\n",
+       " {'user_id': 1001, 'joke_24': 5.7830860611316695},\n",
+       " {'user_id': 1001, 'joke_33': 5.6816758536638385},\n",
+       " {'user_id': 1001, 'joke_37': 5.920645912010233},\n",
+       " {'user_id': 1001, 'joke_43': 5.719735411098295},\n",
+       " {'user_id': 1001, 'joke_47': 8.071662854189437},\n",
+       " {'user_id': 1001, 'joke_55': 5.573499141349482},\n",
+       " {'user_id': 1001, 'joke_57': 5.923930500445841},\n",
+       " {'user_id': 1001, 'joke_58': 5.9793172715780365},\n",
+       " {'user_id': 1001, 'joke_60': 5.916319952555864},\n",
+       " {'user_id': 1001, 'joke_64': 5.975977616100421},\n",
+       " {'user_id': 1001, 'joke_67': 5.726215401671424},\n",
+       " {'user_id': 1001, 'joke_71': 5.473898526952023},\n",
+       " {'user_id': 1001, 'joke_72': 9.827958290733308},\n",
+       " {'user_id': 1001, 'joke_73': 4.587967997499566},\n",
+       " {'user_id': 1001, 'joke_74': 5.67226412298997},\n",
+       " {'user_id': 1001, 'joke_75': 5.410750139215516},\n",
+       " {'user_id': 1001, 'joke_76': -2.6734645908909527},\n",
+       " {'user_id': 1001, 'joke_77': 4.865848565145123},\n",
+       " {'user_id': 1001, 'joke_78': 3.961025227632968},\n",
+       " {'user_id': 1001, 'joke_79': 5.062159764505647},\n",
        " {'user_id': 1001, 'joke_80': 4.045845836818003},\n",
-       " {'user_id': 1001, 'joke_81': 1.4955859224161052},\n",
+       " {'user_id': 1001, 'joke_81': 1.4955859224161039},\n",
        " {'user_id': 1001, 'joke_82': 5.053253507604671},\n",
-       " {'user_id': 1001, 'joke_83': -1.3356479151249259},\n",
-       " {'user_id': 1001, 'joke_84': 5.0165622116004105},\n",
-       " {'user_id': 1001, 'joke_85': 4.885617002148313},\n",
-       " {'user_id': 1001, 'joke_86': 5.477206909088974},\n",
+       " {'user_id': 1001, 'joke_83': -1.3356479151249347},\n",
+       " {'user_id': 1001, 'joke_84': 5.016562211600409},\n",
+       " {'user_id': 1001, 'joke_85': 4.8856170021483125},\n",
+       " {'user_id': 1001, 'joke_86': 5.477206909088977},\n",
        " {'user_id': 1001, 'joke_87': 3.5571783542179523},\n",
-       " {'user_id': 1001, 'joke_88': 3.9047163655290156},\n",
-       " {'user_id': 1001, 'joke_89': 9.288120689770095},\n",
+       " {'user_id': 1001, 'joke_88': 3.904716365529014},\n",
+       " {'user_id': 1001, 'joke_89': 9.288120689770098},\n",
        " {'user_id': 1001, 'joke_90': 5.167449843337873},\n",
        " {'user_id': 1001, 'joke_91': 4.491371947442441},\n",
        " {'user_id': 1001, 'joke_92': 4.6983272762764665},\n",
-       " {'user_id': 1001, 'joke_93': -6.077476549004646},\n",
-       " {'user_id': 1001, 'joke_94': 5.210642446274966},\n",
-       " {'user_id': 1001, 'joke_95': 5.1202386353047045},\n",
-       " {'user_id': 1001, 'joke_96': 4.66025295865723},\n",
+       " {'user_id': 1001, 'joke_93': -6.077476549004643},\n",
+       " {'user_id': 1001, 'joke_94': 5.210642446274965},\n",
+       " {'user_id': 1001, 'joke_95': 5.120238635304701},\n",
+       " {'user_id': 1001, 'joke_96': 4.660252958657232},\n",
        " {'user_id': 1001, 'joke_97': 4.660128585241255},\n",
-       " {'user_id': 1001, 'joke_98': 2.67378754559341},\n",
-       " {'user_id': 1001, 'joke_99': 5.303777395265998},\n",
+       " {'user_id': 1001, 'joke_98': 2.6737875455934113},\n",
+       " {'user_id': 1001, 'joke_99': 5.303777395265997},\n",
        " {'user_id': 1001, 'joke_100': 8.519295706358418}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommendation_2(1001, ratings_df)"
+    "recommendation_2(1001, no_normalized_ratings_df, similarity_matrix)"
    ]
   }
  ],
