--- a/UBCF.ipynb
+++ b/UBCF.ipynb
@@ -31,9 +31,7 @@
     "\n",
     "# lettura dei rating non normalizzati dal relativo CSV (serve solo per calcolare la predizione, nella\n",
     "# quale serve calcolare il rating medio dell'utente)\n",
-    "# non c'è bisogno di levare i 99, tanto questo df serve solo per calcolare il rating medio dell'utente target\n",
-    "# e si droppano le barzellette che non ha votato\n",
-    "ratings_df = pd.read_csv('./data/jester_jokes_ratings.csv')"
+    "no_normalized_ratings_df = pd.read_csv('./data/no_normalized_ratings.csv')"
    ]
   },
   {
@@ -97,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommendation_1(active_user_id, normalized_ratings_df, ratings_df):\n",
+    "def recommendation_1(active_user_id, normalized_ratings_df, no_normalized_ratings_df):\n",
     "    # si prende la riga relativa all'id dell'utente\n",
     "    active_user = normalized_ratings_df[normalized_ratings_df['user_id'] == active_user_id]\n",
     "    # della riga si considerano solo i rating espressi dall'utente\n",
@@ -122,7 +120,7 @@
     "            recommendation_columns.append(column)\n",
     "    # si calcola la media delle valutazioni dello user target in modo \n",
     "    # da avere una predizione più precisa (formula vista nel corso)\n",
-    "    active_user_raw_ratings = ratings_df[ratings_df['user_id'] == active_user_id].iloc[:, 2:]\n",
+    "    active_user_raw_ratings = no_normalized_ratings_df[no_normalized_ratings_df['user_id'] == active_user_id].iloc[:, 2:]\n",
     "    active_user_mean_rating = np.mean(active_user_raw_ratings.drop(recommendation_columns, axis = 1).values)\n",
     "    # si prendono i rating dei neighbor dell'utente target\n",
     "    neighbours_df = normalized_ratings_df[normalized_ratings_df['user_id'].isin(similarity[\"user_id\"])]\n",
@@ -157,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,13 +266,13 @@
        " {'user_id': 1001, 'joke_100': 5.533742636502604}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommendation_1(1001, normalized_ratings_df, ratings_df)"
+    "recommendation_1(1001, normalized_ratings_df, no_normalized_ratings_df)"
    ]
   }
  ],
