--- a/creazione_CSV.ipynb
+++ b/creazione_CSV.ipynb
@@ -34,6 +34,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creazione di una funzione che prende in input la posizione dei file HTML (barzellette)\n",
+    "# e restituisce una coppia <id_barzelletta, barzelletta>\n",
+    "def joke_extractor(file):\n",
+    "    # si apre il file richiesto con la codifica specificata\n",
+    "    data = codecs.open(file, 'r', encoding=\"cp1252\")\n",
+    "    # si leggono i dati\n",
+    "    joke_html = data.read()\n",
+    "    # si prende il contenuto della pagina HTML, quindi la barzelletta\n",
+    "    joke = html2text.html2text(joke_html)\n",
+    "    # estrazione dell'id delle barzellette dal nome del file:\n",
+    "    # file.split(caratteri), sulla base dei caratteri inseriti restituisce un'array di \n",
+    "    # due elementi: la parte di stringa che stava prima i caratteri specificati e \n",
+    "    # la parte dopo\n",
+    "    joke_id = int(file.split('init')[1].split('.html')[0])\n",
+    "    return (joke_id, joke)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,34 +152,11 @@
        "9       11  |  \\n\\n  \\nQ. What do a hurricane, a tornado, ..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# creazione di una funzione che prende in input la posizione dei file html (barzellette)\n",
-    "# e restituisce una coppia <id_barzelletta, barzelletta>\n",
-    "def joke_extractor(file):\n",
-    "    # si apre il file richiesto con la codifica specificata\n",
-    "    data = codecs.open(file, 'r', encoding=\"cp1252\")\n",
-    "    # si leggono i dati\n",
-    "    joke_html = data.read()\n",
-    "    # si prende il contenuto della pagina HTML, quindi la barzelletta\n",
-    "    joke = html2text.html2text(joke_html)\n",
-    "    # estrazione dell'id delle barzellette dal nome del file:\n",
-    "    # file.split(caratteri), sulla base dei caratteri inseriti restituisce un'array di \n",
-    "    # due elementi: la parte di stringa che stava prima i caratteri specificati e \n",
-    "    # la parte dopo\n",
-    "    joke_id = int(file.split('init')[1].split('.html')[0])\n",
-    "    return (joke_id, joke)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# si utilizza la funzione definita sopra per estrarre barzelletta ed id:\n",
     "# si prendono tutti i nomi dei file presenti nel path specificato\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -542,7 +542,7 @@
        "[10 rows x 102 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,18 +569,19 @@
     "for i in range(1, 101):\n",
     "    df_all_ratings = df_all_ratings.rename({i: 'joke_' + str(i)}, axis='columns')\n",
     "df_all_ratings = df_all_ratings.astype({\"user_id\": int})\n",
+    "# si sostituiscono i 99 con i NaN\n",
     "df_all_ratings = replace_99(df_all_ratings)\n",
     "df_all_ratings.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# si scrivono i rating degli utenti su un CSV\n",
-    "df_all_ratings.to_csv('data/jester_jokes_ratings.csv', index = None)"
+    "df_all_ratings.to_csv('data/no_normalized_ratings.csv', index = None)"
    ]
   },
   {
@@ -593,12 +594,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# funzione per normalizzare i rating degli utenti:\n",
-    "# si sottrae ad ogni rating di una barzelletta il rating medio dell'utente che valutato quella barzelletta\n",
+    "# si sottrae ad ogni rating di una barzelletta il rating medio dell'utente che ha valutato quella barzelletta\n",
     "def normalization(ratings):\n",
     "    # shape resituisce una coppia <num_righe, num_colonna>, si prende il primo elemento della \n",
     "    # coppia, quindi numero di righe (utenti totali)\n",
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -959,7 +960,7 @@
        "[10 rows x 102 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +999,7 @@
    "source": [
     "# utenti che hanno valutato tutte e 100 le barzellette\n",
     "complete_ratings = df_all_ratings[df_all_ratings['number_of_jokes_rated'] == 100]\n",
-    "complete_ratings.to_csv('data/complete_ratings.csv', index = None)"
+    "complete_ratings.to_csv('data/complete_ratings_matrix.csv', index = None)"
    ]
   }
  ],
