--- a/creazione_CSV.ipynb
+++ b/creazione_CSV.ipynb
@@ -86,53 +86,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>42</td>\n",
-       "      <td>|  \\n\\n  \\nTwo men are discussing the age old ...</td>\n",
+       "      <td>95</td>\n",
+       "      <td>\\n  \\nJust a thought ..\\n\\nBefore criticizin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19</td>\n",
-       "      <td>|  \\n\\n  \\nQ: If a person who speaks three lan...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>\\nA man visits the doctor. The doctor says \"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>88</td>\n",
-       "      <td>\\n  \\nA Czechoslovakian man felt his eyesigh...</td>\n",
+       "      <td>83</td>\n",
+       "      <td>\\n_What a woman says_ :  \\n\"This place is a ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>93</td>\n",
-       "      <td>\\n  \\nReaching the end of a job interview, t...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>|  \\n\\n  \\nHow many men does it take to screw ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>52</td>\n",
-       "      <td>|  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>|  \\n\\n  \\nHow many Irishmen does it take to c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>|  \\n\\n  \\nQ. What's O. J. Simpson's Internet ...</td>\n",
+       "      <td>56</td>\n",
+       "      <td>|  \\n\\n  \\nA man and Cindy Crawford get strand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>63</td>\n",
-       "      <td>|  \\n\\n  \\nAn engineer, a physicist and a math...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>\\n  \\nA bus station is where a bus stops.  \\...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>100</td>\n",
-       "      <td>\\n  \\nQ: Whats the difference between greeti...</td>\n",
+       "      <td>76</td>\n",
+       "      <td>\\n  \\nThere once was a man and a woman that ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>27</td>\n",
-       "      <td>|  \\n\\n  \\nClinton returns from a vacation in ...</td>\n",
+       "      <td>21</td>\n",
+       "      <td>|  \\n\\n_\\n\\n_\\n\\n  \\n\\n  \\nWhat's the differen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>11</td>\n",
-       "      <td>|  \\n\\n  \\nQ. What do a hurricane, a tornado, ...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>|  \\n\\n  \\nA Jewish young man was seeing a psy...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,16 +140,16 @@
       ],
       "text/plain": [
        "   joke_id                                               joke\n",
-       "0       42  |  \\n\\n  \\nTwo men are discussing the age old ...\n",
-       "1       19  |  \\n\\n  \\nQ: If a person who speaks three lan...\n",
-       "2       88    \\n  \\nA Czechoslovakian man felt his eyesigh...\n",
-       "3       93    \\n  \\nReaching the end of a job interview, t...\n",
-       "4       52  |  \\n\\n  \\nQ: What do Monica Lewinsky and Bob ...\n",
-       "5        5  |  \\n\\n  \\nQ. What's O. J. Simpson's Internet ...\n",
-       "6       63  |  \\n\\n  \\nAn engineer, a physicist and a math...\n",
-       "7      100    \\n  \\nQ: Whats the difference between greeti...\n",
-       "8       27  |  \\n\\n  \\nClinton returns from a vacation in ...\n",
-       "9       11  |  \\n\\n  \\nQ. What do a hurricane, a tornado, ..."
+       "0       95    \\n  \\nJust a thought ..\\n\\nBefore criticizin...\n",
+       "1        1    \\nA man visits the doctor. The doctor says \"...\n",
+       "2       83    \\n_What a woman says_ :  \\n\"This place is a ...\n",
+       "3       17  |  \\n\\n  \\nHow many men does it take to screw ...\n",
+       "4       40  |  \\n\\n  \\nHow many Irishmen does it take to c...\n",
+       "5       56  |  \\n\\n  \\nA man and Cindy Crawford get strand...\n",
+       "6       99    \\n  \\nA bus station is where a bus stops.  \\...\n",
+       "7       76    \\n  \\nThere once was a man and a woman that ...\n",
+       "8       21  |  \\n\\n_\\n\\n_\\n\\n  \\n\\n  \\nWhat's the differen...\n",
+       "9       37  |  \\n\\n  \\nA Jewish young man was seeing a psy..."
       ]
      },
      "execution_count": 3,
@@ -588,13 +588,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Separazione degli utenti che hanno valutato tutte le barzellette con quelli che invece ne hanno valutate solo alcune\n",
+    "Si separano i rating noramlizzati in due parti: \n",
+    "1. una parte contenente tutti gli utenti che hanno valutato tutte e 100 le barzellette;\n",
+    "2. una parte contenente tutti gli utenti che non hanno valutato tutte le barzellette."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# utenti che hanno valutato tutte e 100 le barzellette\n",
+    "complete_ratings = df_all_ratings[df_all_ratings['number_of_jokes_rated'] == 100]\n",
+    "complete_ratings.to_csv('data/complete_ratings_matrix.csv', index = None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Creazione CSV con i rating degli utenti (normalizzati)\n",
     "Si fa un pre-processamento dei dati che permette di normalizzare i dati. In particolare ai rating delle barzellette di ogni utente gli viene sottratto il rating medio dell'utente stesso, così da rendere gli utenti confrontabili."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -960,7 +981,7 @@
        "[10 rows x 102 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,33 +994,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# si scrivono i rating degli utenti su un CSV\n",
     "normalized_ratings.to_csv('data/normalized_ratings.csv', index = None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Separazione degli utenti che hanno valutato tutte le barzellette con quelli che invece ne hanno valutate solo alcune\n",
-    "Si separano i rating noramlizzati in due parti: \n",
-    "1. una parte contenente tutti gli utenti che hanno valutato tutte e 100 le barzellette;\n",
-    "2. una parte contenente tutti gli utenti che non hanno valutato tutte le barzellette."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# utenti che hanno valutato tutte e 100 le barzellette\n",
-    "complete_ratings = df_all_ratings[df_all_ratings['number_of_jokes_rated'] == 100]\n",
-    "complete_ratings.to_csv('data/complete_ratings_matrix.csv', index = None)"
    ]
   }
  ],
@@ -1019,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
