--- a/IBCF.ipynb
+++ b/IBCF.ipynb
@@ -244,11 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommendation_ibcf(active_user_id, no_normalized_ratings_df, similarity_matrix):\n",
+    "def recommendation_ibcf(active_user_id, no_normalized_ratings_df, similarity_matrix, val):\n",
     "    # si prende la riga relativa all'utente con l'id specificato\n",
     "    active_user = no_normalized_ratings_df[no_normalized_ratings_df['user_id'] == active_user_id]\n",
-    "    print(\"L'utente target è: \")\n",
-    "    print(active_user)\n",
     "    # si considerano solo i rating espressi dall'utente target\n",
     "    active_user_rating = active_user.iloc[:, 2:]\n",
     "    \n",
@@ -257,8 +255,6 @@
     "    for column in active_user_rating.columns:\n",
     "        if math.isnan(active_user_rating[column].values[0]):\n",
     "            recommendation_columns.append(column)\n",
-    "    print(\"Le barzellette raccomandabili all'utente target sono:\")\n",
-    "    print(recommendation_columns)\n",
     "    \n",
     "    # si prendono le barzellette già valutate dall'utente\n",
     "    rated_items = list(set(list(active_user_rating.columns)) - set(recommendation_columns))\n",
@@ -268,7 +264,6 @@
     "    final = []\n",
     "    for joke in recommendation_columns:\n",
     "        score = score_user_item_ibcf(joke, rated_items, active_user_rating, similarity_matrix)\n",
-    "        print(\"per la barzelletta \" + joke + \" si è predetto un punteggio di: \" + str(score))\n",
     "        if score > top_score:\n",
     "            top_score = score\n",
     "            joke_to_suggest = joke\n",
@@ -276,11 +271,19 @@
     "        app_2[\"user_id\"] = active_user_id\n",
     "        app_2[joke] = score\n",
     "        final.append(app_2)\n",
-    "    print('\\nil valore più alto predetto è ' + str(top_score) + ' su 10')\n",
-    "    print('quindi la barzelletta da raccomandare per la quale si è predetto quel punteggio è: ', joke_to_suggest)\n",
-    "    s = jokes_df[jokes_df[\"joke_id\"] == int(joke_to_suggest[5:])][\"joke\"]\n",
-    "    for c in s: \n",
-    "        print(c)\n",
+    "        \n",
+    "    if (not(val)):\n",
+    "        print(\"L'utente target è: \")\n",
+    "        print(active_user)\n",
+    "        print(\"Le barzellette raccomandabili all'utente target sono:\")\n",
+    "        print(recommendation_columns)\n",
+    "        for elem in final:\n",
+    "            print(\"per la barzelletta \" + str(list(elem.keys())[1]) + \" si è predetto un punteggio di: \" + str(elem[list(elem.keys())[1]]))\n",
+    "        print('\\nil valore più alto predetto è ' + str(top_score) + ' su 10')\n",
+    "        print('quindi la barzelletta da raccomandare per la quale si è predetto quel punteggio è: ', joke_to_suggest) \n",
+    "        s = jokes_df[jokes_df[\"joke_id\"] == int(joke_to_suggest[5:])][\"joke\"]\n",
+    "        for c in s: \n",
+    "            print(c)\n",
     "    \n",
     "    return final\n",
     "    "
@@ -312,41 +315,41 @@
       "['joke_1', 'joke_2', 'joke_3', 'joke_4', 'joke_9', 'joke_23', 'joke_24', 'joke_33', 'joke_37', 'joke_43', 'joke_47', 'joke_55', 'joke_57', 'joke_58', 'joke_60', 'joke_64', 'joke_67', 'joke_71', 'joke_72', 'joke_73', 'joke_74', 'joke_75', 'joke_76', 'joke_77', 'joke_78', 'joke_79', 'joke_80', 'joke_81', 'joke_82', 'joke_83', 'joke_84', 'joke_85', 'joke_86', 'joke_87', 'joke_88', 'joke_89', 'joke_90', 'joke_91', 'joke_92', 'joke_93', 'joke_94', 'joke_95', 'joke_96', 'joke_97', 'joke_98', 'joke_99', 'joke_100']\n",
       "per la barzelletta joke_1 si è predetto un punteggio di: 3.4254871108844367\n",
       "per la barzelletta joke_2 si è predetto un punteggio di: 4.315733843472164\n",
-      "per la barzelletta joke_3 si è predetto un punteggio di: 3.6152380830219975\n",
-      "per la barzelletta joke_4 si è predetto un punteggio di: 4.365947138419934\n",
+      "per la barzelletta joke_3 si è predetto un punteggio di: 3.615238083021998\n",
+      "per la barzelletta joke_4 si è predetto un punteggio di: 4.3659471384199335\n",
       "per la barzelletta joke_9 si è predetto un punteggio di: 4.063659612789524\n",
-      "per la barzelletta joke_23 si è predetto un punteggio di: 4.711323349752186\n",
+      "per la barzelletta joke_23 si è predetto un punteggio di: 4.711323349752185\n",
       "per la barzelletta joke_24 si è predetto un punteggio di: 4.026341960268979\n",
-      "per la barzelletta joke_33 si è predetto un punteggio di: 4.447748944317417\n",
+      "per la barzelletta joke_33 si è predetto un punteggio di: 4.447748944317419\n",
       "per la barzelletta joke_37 si è predetto un punteggio di: 3.9807615269908183\n",
       "per la barzelletta joke_43 si è predetto un punteggio di: 4.326335946845561\n",
-      "per la barzelletta joke_47 si è predetto un punteggio di: 4.98706876255028\n",
+      "per la barzelletta joke_47 si è predetto un punteggio di: 4.987068762550281\n",
       "per la barzelletta joke_55 si è predetto un punteggio di: 3.6242032362946714\n",
-      "per la barzelletta joke_57 si è predetto un punteggio di: 3.876839869320778\n",
-      "per la barzelletta joke_58 si è predetto un punteggio di: 4.016730203757088\n",
-      "per la barzelletta joke_60 si è predetto un punteggio di: 3.820812585930526\n",
-      "per la barzelletta joke_64 si è predetto un punteggio di: 3.827095864939665\n",
-      "per la barzelletta joke_67 si è predetto un punteggio di: 4.120045844472124\n",
+      "per la barzelletta joke_57 si è predetto un punteggio di: 3.8768398693207766\n",
+      "per la barzelletta joke_58 si è predetto un punteggio di: 4.0167302037570884\n",
+      "per la barzelletta joke_60 si è predetto un punteggio di: 3.820812585930525\n",
+      "per la barzelletta joke_64 si è predetto un punteggio di: 3.827095864939664\n",
+      "per la barzelletta joke_67 si è predetto un punteggio di: 4.120045844472123\n",
       "per la barzelletta joke_71 si è predetto un punteggio di: 4.54656728423965\n",
-      "per la barzelletta joke_72 si è predetto un punteggio di: 5.058687091922563\n",
+      "per la barzelletta joke_72 si è predetto un punteggio di: 5.058687091922564\n",
       "per la barzelletta joke_73 si è predetto un punteggio di: 4.294764360726413\n",
       "per la barzelletta joke_74 si è predetto un punteggio di: 3.948700542484094\n",
       "per la barzelletta joke_75 si è predetto un punteggio di: 4.603108300096075\n",
-      "per la barzelletta joke_76 si è predetto un punteggio di: 5.072673088755534\n",
+      "per la barzelletta joke_76 si è predetto un punteggio di: 5.072673088755533\n",
       "per la barzelletta joke_77 si è predetto un punteggio di: 5.97\n",
       "per la barzelletta joke_78 si è predetto un punteggio di: 0\n",
       "per la barzelletta joke_79 si è predetto un punteggio di: 4.731750734092437\n",
       "per la barzelletta joke_80 si è predetto un punteggio di: 4.592745544468261\n",
       "per la barzelletta joke_81 si è predetto un punteggio di: 5.224835071222274\n",
       "per la barzelletta joke_82 si è predetto un punteggio di: 5.0\n",
-      "per la barzelletta joke_83 si è predetto un punteggio di: 5.1840513012401255\n",
+      "per la barzelletta joke_83 si è predetto un punteggio di: 5.184051301240127\n",
       "per la barzelletta joke_84 si è predetto un punteggio di: 5.0\n",
       "per la barzelletta joke_85 si è predetto un punteggio di: 4.106502583327911\n",
       "per la barzelletta joke_86 si è predetto un punteggio di: 3.4132408162550747\n",
-      "per la barzelletta joke_87 si è predetto un punteggio di: 4.980228955046588\n",
+      "per la barzelletta joke_87 si è predetto un punteggio di: 4.980228955046587\n",
       "per la barzelletta joke_88 si è predetto un punteggio di: 4.856191952041618\n",
-      "per la barzelletta joke_89 si è predetto un punteggio di: 5.120050155874501\n",
-      "per la barzelletta joke_90 si è predetto un punteggio di: 5.0477268846458765\n",
+      "per la barzelletta joke_89 si è predetto un punteggio di: 5.1200501558745\n",
+      "per la barzelletta joke_90 si è predetto un punteggio di: 5.047726884645876\n",
       "per la barzelletta joke_91 si è predetto un punteggio di: 0\n",
       "per la barzelletta joke_92 si è predetto un punteggio di: 0\n",
       "per la barzelletta joke_93 si è predetto un punteggio di: 5.085441222848379\n",
@@ -354,7 +357,7 @@
       "per la barzelletta joke_95 si è predetto un punteggio di: 0\n",
       "per la barzelletta joke_96 si è predetto un punteggio di: 5.78\n",
       "per la barzelletta joke_97 si è predetto un punteggio di: 4.47\n",
-      "per la barzelletta joke_98 si è predetto un punteggio di: 4.956197796385821\n",
+      "per la barzelletta joke_98 si è predetto un punteggio di: 4.956197796385823\n",
       "per la barzelletta joke_99 si è predetto un punteggio di: 5.141923227481589\n",
       "per la barzelletta joke_100 si è predetto un punteggio di: 4.718798651112754\n",
       "\n",
@@ -371,7 +374,7 @@
     }
    ],
    "source": [
-    "final = recommendation_ibcf(1001, no_normalized_ratings_df, similarity_matrix)"
+    "final = recommendation_ibcf(1001, no_normalized_ratings_df, similarity_matrix, False)"
    ]
   }
  ],
@@ -391,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
