--- a/UBCF.ipynb
+++ b/UBCF.ipynb
@@ -99,11 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommendation_ubcf(active_user_id, normalized_ratings_df, no_normalized_ratings_df):\n",
+    "def recommendation_ubcf(active_user_id, normalized_ratings_df, no_normalized_ratings_df, val):\n",
     "    # si prende la riga relativa all'id dell'utente\n",
     "    active_user = normalized_ratings_df[normalized_ratings_df['user_id'] == active_user_id]\n",
-    "    print(\"L'utente target è: \")\n",
-    "    print(active_user)\n",
     "    # della riga si considerano solo i rating espressi dall'utente\n",
     "    active_user_rating = active_user.iloc[:, 2:]\n",
     "    # si droppa altrimenti con lui uscirebbe similarità massima (= 1)\n",
@@ -120,22 +118,17 @@
     "    similarity = pd.DataFrame(similarity, columns = ['user_id', 'similarity'])\n",
     "    # si buttano i vicini che sono troppo poco simili\n",
     "    similarity = similarity[similarity['similarity'] > 0.3]\n",
-    "    print(\"La similarità tra l'utente target e gli altri utenti è: \")\n",
-    "    print(similarity)\n",
     "        \n",
     "    # si prendono le barzellette raccomandabili all'utente\n",
     "    recommendation_columns = []\n",
     "    for column in active_user_rating.columns:\n",
     "        if math.isnan(active_user_rating[column].values[0]):\n",
     "            recommendation_columns.append(column)\n",
-    "    print(\"Le barzellette raccomandabili all'utente target sono:\")\n",
-    "    print(recommendation_columns)\n",
     "    \n",
     "    # si calcola la media delle valutazioni dello user target in modo \n",
     "    # da avere una predizione più precisa (formula vista nel corso)\n",
     "    active_user_raw_ratings = no_normalized_ratings_df[no_normalized_ratings_df['user_id'] == active_user_id].iloc[:, 2:]\n",
     "    active_user_mean_rating = np.mean(active_user_raw_ratings.drop(recommendation_columns, axis = 1).values)\n",
-    "    print(\"Il rating medio espresso dall'utente è: \" + str(active_user_mean_rating))\n",
     "    \n",
     "    # si prendono i rating dei neighbor dell'utente target\n",
     "    neighbours_df = normalized_ratings_df[normalized_ratings_df['user_id'].isin(similarity[\"user_id\"])]\n",
@@ -155,7 +148,6 @@
     "        app = app.sort_values(by=['similarity'], ascending=False).head(100)\n",
     "        # si predice la valutazione dell'utente in base ai suoi vicini\n",
     "        score = score_user_item_ubcf(column, app, app[\"similarity\"], active_user_mean_rating)\n",
-    "        print(\"per la barzelletta \" + str(column) + \" si è predetto un punteggio di: \" + str(score))\n",
     "        if score > top_score:\n",
     "            top_score = score\n",
     "            joke_to_suggest = column\n",
@@ -163,11 +155,22 @@
     "        app_2[\"user_id\"] = active_user_id\n",
     "        app_2[column] = score\n",
     "        final.append(app_2)\n",
-    "    print('\\nil valore più alto predetto è ' + str(top_score) + ' su 10')\n",
-    "    print('quindi la barzelletta da raccomandare per la quale si è predetto quel punteggio è: ', joke_to_suggest) \n",
-    "    s = jokes_df[jokes_df[\"joke_id\"] == int(joke_to_suggest[5:])][\"joke\"]\n",
-    "    for c in s: \n",
-    "        print(c)\n",
+    "        \n",
+    "    if (not(val)):\n",
+    "        print(\"L'utente target è: \")\n",
+    "        print(active_user)\n",
+    "        print(\"La similarità tra l'utente target e gli altri utenti è: \")\n",
+    "        print(similarity)\n",
+    "        print(\"Le barzellette raccomandabili all'utente target sono:\")\n",
+    "        print(recommendation_columns)\n",
+    "        print(\"Il rating medio espresso dall'utente è: \" + str(active_user_mean_rating))\n",
+    "        for elem in final:\n",
+    "            print(\"per la barzelletta \" + str(list(elem.keys())[1]) + \" si è predetto un punteggio di: \" + str(elem[list(elem.keys())[1]]))\n",
+    "        print('\\nil valore più alto predetto è ' + str(top_score) + ' su 10')\n",
+    "        print('quindi la barzelletta da raccomandare per la quale si è predetto quel punteggio è: ', joke_to_suggest) \n",
+    "        s = jokes_df[jokes_df[\"joke_id\"] == int(joke_to_suggest[5:])][\"joke\"]\n",
+    "        for c in s: \n",
+    "            print(c)\n",
     "\n",
     "    return final"
    ]
@@ -291,7 +294,7 @@
     }
    ],
    "source": [
-    "final = recommendation_ubcf(1001, normalized_ratings_df, no_normalized_ratings_df)"
+    "final = recommendation_ubcf(1001, normalized_ratings_df, no_normalized_ratings_df, False)"
    ]
   }
  ],
@@ -311,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
